PlayFab + EOS login

--- a/Northbreach.uproject
+++ b/Northbreach.uproject
@@ -73,6 +73,10 @@
 		{
 			"Name": "OnlineSubsystemEOS",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	]
 }
